--- a/ewqe-master/ewqe-master/index.html
+++ b/ewqe-master/ewqe-master/index.html
@@ -18,14 +18,16 @@
 
     <div class="menu">
         <div class="menu-item" onclick="scrollToTop()">Start</div>
-        <div class="menu-item" onclick="scrollToSection('about')">O mnie</div>
-        <div class="menu-item" onclick="scrollToSection('skills'), updateProgressBar()">Umiejętności</div>
-        <div class="menu-item" onclick="scrollToSection('education')">Edukacja</div>
-        <div class="menu-item" onclick="scrollToSection('projects')">Projekty</div>
+        <div class="menu-item" onclick="scrollToSection('about')">About me</div>
+        <div class="menu-item" onclick="scrollToSection('skills'), updateProgressBar()">Skills</div>
+        <div class="menu-item" onclick="scrollToSection('education')">Education</div>
+        <div class="menu-item" onclick="scrollToSection('projects')">Projects</div>
+        <div class="menu-item" onclick="scrollToSection('contact')">Contact me</div>
+
     </div>
 
     <div id="about" class="section">
-        <h2>O mnie</h2>
+        <h2>About me</h2>
         <div class="content">
             <div id="content_left">qwe</div>
             <div id="content_right">ewq</div>
@@ -34,7 +36,7 @@
     </div>
 
     <div id="skills" class="section">
-        <h2>Umiejętności</h2>
+        <h2>Skills</h2>
         <div class="content">
             <div id="content_left">
                 <div id="progress-bar">
@@ -77,21 +79,40 @@
             <div id="content_right">asdqwe</div>
         </div>
     </div>
-        <div id="education" class="section">
-            <h2>Edukacja</h2>
-            <div class="content">
-                <div id="content_left">asdqwe</div>
-                <div id="content_right">asdqwe</div>
-            </div>
+    <div id="education" class="section">
+        <h2>Education</h2>
+        <div class="content">
+            <div id="content_left">asdqwe</div>
+            <div id="content_right">asdqwe</div>
         </div>
-        <div id="projects" class="section">
-            <h2>Projekty</h2>
-            <div class="explosion">
-                <div id="content_left">asdqwe</div>
-                <div id="content_right">asdqwe</div>
+    </div>
+    <div id="projects" class="section">
+        <h2>Projects</h2>
 
-            </div>
-        </div>
+    </div>
+
+
+
+
+    <section id="contact" class="section">
+        <h2>Contact me</h2>
+        <form action="#" method="POST">
+          <label for="name">Name:</label>
+          <input type="text" id="name" name="name" required>
+          <label for="email">Email:</label>
+          <input type="email" id="email" name="email" required>
+          <label for="message">Message:</label>
+          <textarea id="message" name="message" required></textarea>
+          <button type="submit">Send Message</button>
+        </form>
+      </section>
+
+
+    <div id="footer">
+        <p>© 2023 Mateusz Bury INDUSTRIES. All rights reserved. Św. Filipa 5, Kraków, Poland, 11-222</p>
+        <p>(48) 111-222-333 | Email: mateusz.bury@microsoft.wsei.edu.pl
+        GITHUB: mateuszbury420</p> 
+    </div>
 </body>
 
 </html>
