--- a/ewqe-master/ewqe-master/index.html
+++ b/ewqe-master/ewqe-master/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My CV</title>
+    <title>Mateusz Bury</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="fonts.css">
     <script src="main.js"></script>
